Logistic regression is added

--- a/Wind_Energy_Power_Analysis.ipynb
+++ b/Wind_Energy_Power_Analysis.ipynb
@@ -2586,19 +2586,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "Target\n",
-       "0    19525\n",
-       "1    19452\n",
-       "Name: count, dtype: int64"
+       "100.108222    5\n",
+       "100.061557    5\n",
+       "100.074192    5\n",
+       "100.063002    5\n",
+       "100.087389    5\n",
+       "             ..\n",
+       "83.829084     1\n",
+       "78.946866     1\n",
+       "75.086263     1\n",
+       "77.707421     1\n",
+       "101.485399    1\n",
+       "Name: count, Length: 38128, dtype: int64"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2617,7 +2626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
